--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "cors": "^2.8.5",
     "download": "^8.0.0",
     "express": "^4.18.2",
+    "mongoose": "^7.5.3",
     "node-fetch": "^3.3.2",
     "nodemon": "^3.0.1"
   },
